# thumbnail-generator

./: .gitignore  CLAUDE.md  CONTEXT.md  pyproject.toml  skills-lock.json  thumb-pipeline-commands.md
.scratch/pipeline/: PRD.md
.scratch/pipeline/issues/: 01-critique-ranking-unreliable.md  02-compose-aware-subject-placement.md  03-icon-aware-layout.md  04-face-optional-thumbnails.md  05-source-photo-capture-guide.md  06-walking-skeleton.md  07-onboard-asset-pack.md  08-style-library.md  09-candidate-composition.md  10-real-gemini-first-order.md
.thumb/: ledger.jsonl
docs/: reference-curation.md
docs/adr/: 0001-layered-composition.md  0002-gemini-behind-pluggable-providers.md  0003-niche-is-data-not-code.md  0004-cli-plain-files-contact-sheet.md  0005-face-only-launch.md
docs/research/: gemini-free-tier-viability.md
src/thumb/: __main__.py  assetpack.py  capture-guide.md  checklist.py  cli.py  compositor.py  gemini.py  library.py  pipeline.py  providers.py  sheet.py  workspace.py
src/thumb/styles/tech-explainer/: black-editorial.json  red-chips.json
tests/: conftest.py  test_candidate_composition.py  test_contact_sheet.py  test_determinism.py  test_onboard.py  test_onboard_assetpack.py  test_order.py  test_order_list.py  test_order_run.py  test_provider_layer.py  test_style_library.py
tests/stubs/: rembg.py
tests/stubs/google/genai/: __init__.py  types.py
