[project]
name = "thumb"
version = "0.1.0"
description = "Done-for-you YouTube thumbnail pipeline: CLI over plain files (ADR-0004)"
requires-python = ">=3.12"
dependencies = ["pillow"]

[project.optional-dependencies]
# the real provider binding (THUMB_PROVIDERS=gemini); fake mode needs neither
real = ["google-genai", "rembg"]

[project.scripts]
thumb = "thumb.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thumb = ["*.md", "styles/*/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
